src/objects/Zendesk__Zendesk_Ticket_Mapping__c.object
<CustomObject>
    <description>To store the Ticket custom field mapping from multiple Zendesk domains</description>
    <fields>
        <fullName>Zendesk__Ticket_Field_ID__c</fullName>
        <description>Ticket field id for the custom field</description>
        <label>Ticket Field ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zendesk Domain</label>
        <referenceTo>Zendesk__Zendesk_Domain__c</referenceTo>
        <relationshipLabel>Zendesk Support Ticket Mapping</relationshipLabel>
        <relationshipName>Zendesk_Ticket_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Ticket__c</fullName>
        <label>Zendesk Support Ticket Custom Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Support Ticket Mapping</label>
    <nameField>
        <label>Zendesk Support Ticket Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Ticket Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>